--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -20,3 +20,12 @@ $info: #2196F3;
 $success: #4CAF50;
 $warning: #FFC107;
 
+$startis-green: #6daf63;
+$startis-bluemarine: #41bff3;
+$startis-yellow: #ffb53a;
+
+//Social color
+$facebook: #29478A;
+$google: #C83820;
+$twitter: #219ACD;
+$pinterest: #B71117;
